# fastanki

./: CHANGELOG.md  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
ankitools/: _modidx.py  core.py
fastanki/: _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
