[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fastanki"
dynamic = ["version"]
description = "Python tools for Anki"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "github@jhoward.fastmail.fm"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['fastcore', 'anki']

[project.urls]
Repository = "https://github.com/AnswerDotAI/fastanki"
Documentation = "https://AnswerDotAI.github.io/fastanki"

[project.entry-points.nbdev]
fastanki = "fastanki._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "fastanki.__version__"}

[tool.setuptools.packages.find]
include = ["fastanki"]

[tool.nbdev]
